tests/snapshots/references__it_can_parse_deeply_nested_references.snap
---
source: tests/references.rs
expression: x
---
{
  "one": {
    "two": {
      "three": {
        "width": "10px"
      }
    }
  },
  "value": "10"
}
