tests/snapshots/references__it_can_parse_deeply_nested_targets.snap
---
source: tests/references.rs
expression: x
---
{
  "color": "rgba(0, 0, 0, 0.1)",
  "value": {
    "color": {
      "black": {
        "b": "0",
        "g": "0",
        "r": "0"
      }
    }
  }
}
