tests/snapshots/references__it_can_parse_multiple_references.snap
---
source: tests/references.rs
expression: x
---
{
  "b": "100",
  "color": "rgba(10, 10, 100, 0.1)",
  "g": "10",
  "r": "10"
}
