tests/snapshots/references__it_can_parse_nested_references.snap
---
source: tests/references.rs
expression: x
---
{
  "object": {
    "width": "10px"
  },
  "value": "10"
}
