tests/snapshots/references__it_can_parse_reference.snap
---
source: tests/references.rs
expression: x
---
{
  "tree": "10px",
  "two": "rgba(10, 10, 100, 0.1)",
  "values": {
    "b": "100",
    "g": "10",
    "r": "10"
  }
}
