tests/snapshots/references__it_can_reference_from_within_array.snap
---
source: tests/references.rs
expression: x
---
{
  "person": [
    {
      "name": "kalle"
    },
    {
      "surname": "anka"
    }
  ],
  "variables": {
    "name": "kalle",
    "surname": "anka"
  }
}
